<resources>
    <string name="app_name">Super Calculator</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="_2">2</string>
    <string name="_5">5</string>
    <string name="_8">8</string>
    <string name="_3">3</string>
    <string name="_6">6</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="div">div</string>
    <string name="sub">sub</string>
    <string name="mul">mul</string>
    <string name="sum">sum</string>
    <string name="sumTxtName">+</string>
    <string name="mulTxtName">X</string>
    <string name="subTxtName">-</string>
    <string name="divTxtName">/</string>
    <string name="clearTxtName">C</string>
    <string name="resultTxt">Результат</string>
    <string name="equalTxt">=</string>
    <string name="settings">Настройки</string>
    <string name="notnightThemeTxt">Светлая тема</string>
    <string name="darkThemeTxt">Тёмная тема</string>
    <string name="backButtonTxt">Закрыть настройки</string>
    <string name="myCodeBtnTxt">Посмотреть мой код</string>
</resources>