<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/testbackground"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/notnightTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notnightThemeTxt"
        android:textSize="@dimen/txtSzBt">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/darkTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/darkThemeTxt"
        android:textSize="@dimen/txtSzBt">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/myCodeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myCodeBtnTxt"
        android:textSize="@dimen/txtSzBt">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backButtonTxt"
        android:textSize="@dimen/txtSzBt">

    </com.google.android.material.button.MaterialButton>

</LinearLayout>